<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="12dp">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="John Doe"
                    android:textAppearance="@style/AppTheme.DefaultTextTheme"
                    android:textSize="17sp"/>

                <com.imangazalievm.bubbble.presentation.ui.global.views.dribbbletextview.DribbbleTextView
                    android:textColorHighlight="@color/dribbble_link_highlight"
                    android:textColorLink="@color/dribbble_link"
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                    android:textAppearance="@style/AppTheme.DefaultTextTheme"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/comment_create_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAppearance="@style/AppTheme.DefaultTextTheme"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/likes_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_like_white_18dp"
                        android:drawablePadding="6dp"
                        android:text="15"
                        android:textAppearance="@style/AppTheme.DefaultTextTheme"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="72dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_like_white_20dp"
            android:text="@string/like"
            android:textAppearance="@style/AppTheme.DefaultTextTheme"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:drawableTop="@drawable/ic_share_arrow_white_20dp"
            android:text="@string/reply"
            android:textAppearance="@style/AppTheme.DefaultTextTheme"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_copy_white_24dp"
            android:text="@string/copy"
            android:textAppearance="@style/AppTheme.DefaultTextTheme"/>
    </LinearLayout>
</FrameLayout>